# schedule_center

./: .gitignore  wx_vote.lua
inc/common/: a_session.hpp  config_mgr.hpp  device_mgr.hpp  main_task.hpp  pho_conn_pool.hpp  phone_connection.hpp  sche_conn_pool.hpp  schedule_connection.hpp
inc/public/: protocol_define.h  task.hpp  task_interface.h  task_processor.hpp  typedefs.h  work_queue.hpp
inc/wx/: keep_wx_account_session.hpp  keep_wx_account_task.hpp  wx_account_mgr.hpp  wx_vote.hpp  wx_vote_session.hpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  a_session.cpp  config_mgr.cpp  device_mgr.cpp  main_task.cpp  pho_conn_pool.cpp  phone_connection.cpp  sche_conn_pool.cpp  schedule_connection.cpp
src/mpsp/: CMakeLists.txt  main.cpp  mpsp.sln  mpsp.vcxproj  mpsp.vcxproj.filters
src/wx/: CMakeLists.txt  keep_wx_account_session.cpp  keep_wx_account_task.cpp  wx_account_mgr.cpp  wx_vote.cpp  wx_vote_session.cpp
